# pirix

./: .gdbinit  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Makefile  README.md  SConstruct
arch/i386/: cpu.rs  debug.rs  irq.rs  link.ld  mod.rs  multiboot.rs  paging.rs  target.json
arch/i386/asm/: gdt.S  init.S  irq.S
arch/x86_64/: cpu.rs  debug.rs  io.rs  irq.rs  link.ld  mod.rs  multiboot.rs  paging.rs  target.json
arch/x86_64/asm/: init.S  irq.S
arch/x86_64/paging/: entry.rs  mod.rs  table.rs
doc/: Doxyfile  Doxyfile.in
drivers/: CMakeLists.txt
drivers/irq/: bcm2835.c  i386.c  icp.c
drivers/serial/: bcm2835.c  i386.c  pl011.c
drivers/timer/: bcm2835.c  i386.c  icp.c
drivers/video/: pl110.c
include/: arch.h  arch.h.in  config.h.in  elf.h  kernel.h  pirix.h  pthread.h  stdarg.h  stdint.h  stdio.h  stdlib.h  string.h  system.h  tar.h
include/arch/: arm.h  i386.h
include/arch/arm/: config.h  cpu.h
include/arch/i386/: cpu.h  io.h  multiboot.h  paging.h  sync.h  syscall.h  tls.h  types.h
include/arm/: config.h  cpu.h  paging.h
include/config/: i386.h  qemu.h  rbpi.h
include/i386/: config.h  cpu.h  paging.h
include/ix/: cpu.h  fs.h  irq.h  kheap.h  kprint.h  memory.h  paging.h  task.h
include/kernel/: ipc.h  irq.h  kprint.h  process.h  scheduler.h  syscall.h  thread.h  timer.h
include/pirix/: addrspace.h  boot.h  cpu.h  errno.h  frame.h  fs.h  initrd.h  ipc.h  irq.h  kernel.h  kheap.h  memarea.h  memory.h  paging.h  process.h  scheduler.h  semaphore.h  signum.h  spinlock.h  string.h  syscall.h  task.h  thread.h  timer.h  types.h  uio.h  utsname.h  vector.h
include/platform/rbpi/: config.h
include/servers/: system.h
include/sys/: dirent.h  ioctl.h  pirix.h  sysinfo.h  termios.h  uio.h  utime.h  utsname.h
kernel/: CMakeLists.txt  SConscript  addrspace.c  anon_backend.c  debug.rs  div.c  elf_backend.c  frame.c  fs.c  gpio.c  init.S  init.s  initrd.c  ipc.c  irq.c  irq.rs  kernel.rs  kheap.c  kprint.c  link.ld  main.c  memarea.c  memory.c  paging.c  paging.s  process.c  process.rs  scheduler.c  scheduler.rs  semaphore.c  serial.c  string.c  support.rs  syscall.c  syscall.rs  syscall.s  task.c  thread.c  thread.rs  timer.c  (+2 more)
kernel/arch/arm/: arch.c  init.S  paging.c
kernel/arch/i386/: arch.c  init.S  irq.S  multiboot.c  paging.c  tls.c
kernel/arm/: arch.c  init.S  link.ld  paging.c
kernel/dev/: irq.c  irq.s  timer.c
kernel/fs/: file.c  fs.c  initrd.c  ramfs.c
kernel/i386/: arch.c  gdt.S  init.S  irq.S  link.ld  multiboot.c  paging.c  tls.c
kernel/mem/: alloc.rs  boxed.rs  frame.rs  heap.rs  kheap.c  mod.rs  paging.c  zone.rs
kernel/sys/: syscall.s
lib/: CMakeLists.txt  SConscript  crt0.S  div.c  string.c
lib/alloc_system/: Cargo.toml  lib.rs
lib/alloc_system/src/: lib.rs
lib/libc/: CMakeLists.txt  stdio.c  stdlib.c  string.c
lib/pirix/: _exit.c  access.c  chdir.c  chmod.c  chown.c  close.c  dir.c  dirent.c  dup.c  exec.c  execve.c  fnctl.c  fork.c  getcwd.c  getpid.c  gettod.c  isatty.c  kill.c  libgloss.c  link.c  lseek.c  open.c  pathconf.c  pipe.c  popen.c  read.c  sbrk.c  signal.c  sleep.c  stat.c  syscall.S  sysconf.c  termios.c  times.c  unlink.c  utime.c  utsname.c  wait.c  write.c
lib/pirix/arm/: syscall.S
lib/pirix/i386/: crt0.S  syscall.S
lib/pthread/: pthread.c
lib/system/: syscall.S
servers/: CMakeLists.txt  SConscript  link.ld
servers/devmgr/: devfs.c  devfs.h  devmgr.c
servers/login/: login.c
servers/system/: main.c  pathmgr.c  pathmgr.h
servers/vfs/: vfs.c  vfs.h  vnode.c  vnode.h
tools/: CMakeLists.txt  SConscript  arm-config.cmake  i386-config.cmake  kernel.ld  pimg.c  user.ld
user/: CMakeLists.txt  init.c  link.ld
